--- a/hugo.toml
+++ b/hugo.toml
@@ -1,9 +1,9 @@
 baseURL = 'https://example.org/'
+disablePathToLower = true
 languageCode = 'en-us'
 title = 'Errorly'
 theme = "hugo-bearcub"
 copyright = "Errorly"
-
 
 [params]
     madewith="Made With Code"
